--- a/Extra/Template/index.html
+++ b/Extra/Template/index.html
@@ -36,13 +36,93 @@
             </div>
             <div class="left-part flex">
                 <div class="left-content-img flex">
-                    <button class="arrow prev-arrow">&#9664;</button>
+                    <button class="arrow prev-arrow"><</button>
                     <img src="beach-black-and-white-dog-girl-Favim.com-879571.jpg" alt="A woman smiling with her dog in a field." />
-                    <button class="arrow next-arrow">&#9654;</button>
+                    <button class="arrow next-arrow">></button>
                 </div>
             </div>
         </div>
-        <div class="bottom-content flex"></div>
+
+        <div class="bottom-content flex">
+          <div class="bottom-sections flex">
+            <section class="sec-1 flex">
+              <h1>Our Services</h1>
+              <div class="sec-1-img flex">
+                <img src="14599-a-beautiful-young-girl-playing-on-a-playground-with-a-dog-pv.jpg" alt="A women with a beautiful dog">
+              </div>
+              <p>Lorem ipsum dolor sit amet conse ctetur adipi sicing elit. Eveniet earum quam ut velit asper natur?</p>
+              <a href="Read More ->">Read More -></a>
+            </section>
+            <section class="sec-2 flex">
+              <h1>Our Services</h1>
+              <div class="sec-2-img">
+                <img src="14599-a-beautiful-young-girl-playing-on-a-playground-with-a-dog-pv.jpg" alt="A women with a beautiful dog">
+              </div>
+              <p>Lorem ipsum dolor sit amet conse ctetur adipi sicing elit. Eveniet earum quam ut velit asper natur?</p>
+              <a href="Read More ->">Read More -></a>
+              
+            </section>
+            <section class="sec-3 flex">
+              <h1>Latest News</h1>
+              <div class="first-news flex">
+                <p>Monday, January 07, 2012</p>
+                <span>Natus error sit voluptatem accusantium doloremque laudantium. Sit aspernatur aut odit.</span>
+              </div>
+              <div class="second-news flex">
+                <p>Monday, January 07, 2012</p>
+                <span>Natus error sit voluptatem accusantium doloremque laudantium. Sit aspernatur aut odit.</span>
+              </div>
+              <div class="third-news flex">
+                <p>Monday, January 07, 2012</p>
+                <span>Natus error sit voluptatem accusantium doloremque laudantium. Sit aspernatur aut odit.</span>
+              </div>
+              <a href="Read More ->">Read More -></a>
+            </section>
+          </div>
+        </div>
+    </div>
+
+    <div class="footer-div flex">
+      <div class="top-footer flex">
+        <section class="footer-sec1 flex">
+          <h1>Follow US</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam id praesentium veniam voluptatibus voluptas officiis libero</p>
+          <div class="icon-div flex">
+            <div class="facebook flex">
+              <img src="facebook.png" alt="facebook" class="facbook-img">
+            </div>
+
+            <div class="twitter flex">
+              <img src="twitter.png" alt="" class="twitter-img">
+            </div>
+
+            <div class="google flex">
+              <img src="google-browser.png" alt="" class="google-img">
+            </div>
+
+            <div class="instagram flex">
+              <img src="instagram.png" alt="" class="instagram-img">
+            </div>
+          </div>
+        </section>
+        <section class="footer-sec2 flex">
+          <ul class="listComponent">
+            <li>Duis aute irure dolor in reprehenderit</li>
+            <li>Voluptate velit esse cillum dolor</li>
+            <li>Voluptate velit esse cillum dolor</li>
+            <li>Excepteur sint occaecat</li>
+            <li>Fugat nulla pariatur</li>
+          </ul>
+        </section>
+        <section class="footer-sec3 flex">
+          <h1>Testimonials</h1>
+          <p>"Sed ut perspiciatis unde omnis iste natu error sit voluptatem accusantium dolore laudantium, totam rem aperiam, eaque ipsa quae."</p>
+          <span>- John Smith, NY</span>
+        </section>
+      </div>
+      <div class="bottom-footer flex">
+        <p>@Copyright 2014-2015 All Rightd Reserved | Designed by buyandfingdegidnltd.com</p>
+      </div>
     </div>
   </main>
 </body>
