--- a/Extra/TemplateBootstrap/src/Components/Navbar/Navbar.css
+++ b/Extra/TemplateBootstrap/src/Components/Navbar/Navbar.css
@@ -1,29 +1,7 @@
-/* @media (min-width: 1200px) {
-    .container
- {
-        width: 15em;
-        height: 5em;
-        display: flex;
-        justify-content: end;
-    }
-
-} */
-
-nav.navbar.navbar-expand-lg.bg-body-tertiary {
-    height: 5em;
-    
-}
-div#navbarNav {
-    display: flex;
-    justify-content: center;
+.navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl {
+    display: flex
+;
+    flex-wrap: inherit;
     align-items: end;
-    height: 5em;
-}
-ul.navbar-nav {
-    height: 3em;
-    display: flex;
-    /* align-items: end; */
-    justify-content: space-around;
-    width: 60em;
-    font-weight: 700;
+    justify-content: space-between;
 }
