--- a/Extra/TemplateBootstrap/src/Components/HomePage/Homepage.css
+++ b/Extra/TemplateBootstrap/src/Components/HomePage/Homepage.css
@@ -1,13 +1,32 @@
-.color-overlay{
-    position: absolute;
-    width: 100%;
-    height: 100%;
+.image-con {
+  min-height: 60vh;
+  object-fit: cover;
 }
-@media (max-width: 780px) {
-    .bg-img{
-        min-height: 40vh;
-    }
-    h1{
-        font-size: calc(1.525rem+3.3vw);
-    }
+
+.overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-weight: bold;
+}
+
+.overlay-text h1 {
+  margin-bottom: 1rem; /* space between h1 and p */
+  font-size: 3.5rem;
+}
+
+.overlay-text p {
+  font-size: 1.4rem;
+}
+
+@media (max-width: 730px) {
+  .overlay-text h1 {
+    font-size: calc(1.525rem + 3.3vw);
+  }
+
+  .overlay-text p {
+    font-size: calc(0.9rem + 1vw);
+  }
 }
